--- a/steps.html
+++ b/steps.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="my-5">Landing page AXA <small class="text-muted">(27 septembre 2019)</small></h1>
+    <div class="my-5">
+      <h1 class="my-2">Landing page AXA</h1>
+      <p class="text-muted h5">27 septembre 2019 - tinyurl.com/axa-landing-page</p>
+    </div>
 
     <div class="row mb-3">
       <div class="col">
@@ -91,7 +94,7 @@
 
     <div class="row mb-3">
       <div class="col">
-        <h2><span class="text-muted">Step 4 - </span>Add CSS</h2>
+        <h2><span class="text-muted">Step 4 - </span>Adding CSS</h2>
         <pre class="bg-dark pl-4">
           <code class="text-white">
 body {
@@ -129,7 +132,7 @@ li {
 
     <div class="row mb-3">
       <div class="col">
-        <h2><span class="text-muted">Step 5 - </span>Add divs</h2>
+        <h2><span class="text-muted">Step 5 - </span>Adding divs</h2>
         <pre class="bg-dark pl-4">
           <code class="text-white">
 &lt;div>
@@ -186,7 +189,7 @@ li {
 
     <div class="row mb-3">
       <div class="col">
-        <h2><span class="text-muted">Step 4 - </span>Add CSS</h2>
+        <h2><span class="text-muted">Step 6 - </span>Designing CSS class</h2>
         <pre class="bg-dark pl-4">
           <code class="text-white">
 .banner {
