--- a/steps.html
+++ b/steps.html
@@ -58,25 +58,25 @@
 
 &lt;h1>Nos solutions&lt;/h1>
 
-&lt;img src="images/auto.png" alt="" class="icon">
+&lt;img src="images/auto.png" alt="">
 &lt;h3>Assurance Auto&lt;/h3>
 &lt;p>...&lt;/p>
 
 
-&lt;img src="images/bancaire.png" alt="" class="icon">
+&lt;img src="images/bancaire.png" alt="">
 &lt;h3>Assurance Vie&lt;/h3>
 &lt;p>...&lt;/p>
 
-&lt;img src="images/habitation.png" alt="" class="icon">
+&lt;img src="images/habitation.png" alt="">
 &lt;h3>Assurance Habitation&lt;/h3>
 &lt;p>...&lt;/p>
 
-&lt;img src="images/maladie.png" alt="" class="icon">
+&lt;img src="images/maladie.png" alt="">
 &lt;h3>Complémentaire santé&lt;/h3>
 &lt;p>...&lt;/p>
 
 &lt;p>AXA Landing Page / 2019&lt;/p>
-&lt;ul class="social-icons">
+&lt;ul>
   &lt;li>
     &lt;a href="">facebook&lt;/a>
   &lt;/li>
